Update homepage carousel with actual screenshots

--- a/sites/www.thunderbird.net/index.html
+++ b/sites/www.thunderbird.net/index.html
@@ -101,9 +101,14 @@ with great features!') }}{% endblock %}
         </picture>
         <div class="carousel">
           <picture>
-            <source srcset="/media/img/thunderbird/new/screens/128.avif" type="image/avif">
-            <source srcset="/media/img/thunderbird/new/screens/128.webp" type="image/webp">
-            <img src="/media/img/thunderbird/new/screens/128.png" alt="">
+            <source srcset="/media/img/thunderbird/new/screens/mail-screen.avif" type="image/avif">
+            <source srcset="/media/img/thunderbird/new/screens/mail-screen.webp" type="image/webp">
+            <img src="/media/img/thunderbird/new/screens/mail-screen.png" alt="">
+          </picture>
+          <picture>
+            <source srcset="/media/img/thunderbird/new/screens/calendar-screen.avif" type="image/avif">
+            <source srcset="/media/img/thunderbird/new/screens/calendar-screen.webp" type="image/webp">
+            <img src="/media/img/thunderbird/new/screens/calendar-screen.png" alt="">
           </picture>
         </div>
       </div>
