--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -125,7 +125,6 @@
         {{ job_block(_('Sr. Staff Engineer, Desktop'), 'Geoff Lankow', high_res_img('thunderbird/staff/geoff_lankow.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Sr. Developer Relations Engineer'), 'Heather Ellsworth', high_res_img('thunderbird/staff/heather_ellsworth.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Staff Engineer, Desktop'), 'Ikey Doherty', high_res_img('thunderbird/staff/ikey_doherty.png', scale='2x', alt_formats=('webp',))) }}
-        {{ job_block(_('Community Engagement Manager'), 'Jason Evangelho', high_res_img('thunderbird/staff/jason_evangelho.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Sr. Software Engineer, Desktop Add-ons'), 'John Bieling', high_res_img('thunderbird/staff/john_bieling.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Sr. Site Reliability Engineer'), 'Joseph Bass', high_res_img('thunderbird/staff/joseph_bass.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Sr. Security Engineer, Desktop'), 'Kai Engert', high_res_img('thunderbird/staff/kai_engert.png', scale='2x', alt_formats=('webp',))) }}
@@ -142,6 +141,7 @@
         {{ job_block(_('Sr. Manager, Mobile Engineering'), 'Philipp Kewisch', high_res_img('thunderbird/staff/philipp_kewisch.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Sr. Release Engineer'), 'Rob Lemley', high_res_img('thunderbird/staff/rob_lemley.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('User Support Specialist'), 'Roland Tanglao', high_res_img('thunderbird/staff/roland_tanglao.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block(_('Sr Site Reliability Engineer'), 'Ryan Jung', high_res_img('thunderbird/staff/ryan_jung.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Customer Experience Specialist'), 'Sarah Regenspan', high_res_img('thunderbird/staff/sarah_regenspan.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('Software Engineer, Desktop'), 'Sean Burke', high_res_img('thunderbird/staff/sean_burke.png', scale='2x', alt_formats=('webp',))) }}
         {{ job_block(_('UI/UX Designer'), 'Solange Valverde', high_res_img('thunderbird/staff/solange_valverde.png', scale='2x', alt_formats=('webp',))) }}
