Set privacy to enus only

--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -57,7 +57,7 @@
           <li>{{ _('We will never sell it.') }}</li>
           <li>{{ _('You retain ownership and control of it.') }}</li>
         </ul>
-        <a class="strong" href="{{ url('privacy.notices.thunderbird') }}">{{ _('Read the Privacy Policy') }}</a>
+        <a class="strong" href="{{ url('thunderbird.privacy') }}">{{ _('Read the Privacy Policy') }}</a>
       </div>
     </div>
     <div class="value-section values-freedom">
