Add Beta Release Notes link on the Downloads page (fixes #591)

--- a/sites/www.thunderbird.net/thunderbird/all/index.html
+++ b/sites/www.thunderbird.net/thunderbird/all/index.html
@@ -137,6 +137,9 @@
               <li>
                 <a class="dotted" href="{{ thunderbird_url('releasenotes', 'release') }}">{{ _('Release Notes') }}</a>
               </li>
+              <li>
+                <a class="dotted" href="{{ thunderbird_url('releasenotes', 'beta') }}">{{ _('Beta Release Notes') }}</a>
+              </li>
             </ul>
           </div>
         </div>
