--- a/sites/www.thunderbird.net/index.html
+++ b/sites/www.thunderbird.net/index.html
@@ -330,6 +330,35 @@
     </div>
   </section>
 
+  <section id="freedom-to-go-anywhere">
+    <div class="container">
+      <div class="section-text">
+        <h2 class="section-heading">{{_('<span class="txt-gradient">Freedom</span> to Go Anywhere')}}</h2>
+        <h4>{{_('Introducing Thunderbird Mobile')}}</h4>
+        <p>
+          {% trans -%}
+            The freedom and joy of Thunderbird are now available to you anywhere you go.
+            With Thunderbird Mobile your most important messages are sent and received by an open-source,
+            secure app that respects your privacy
+          {%- endtrans %}
+        </p>
+        <div class="cta">
+          <a href="#" class="strong">{{_('Read the announcement')}}</a>
+        </div>
+      </div>
+    </div>
+    <div class="mobile-render" aria-hidden="true">
+      <picture>
+              <source srcset="/media/img/thunderbird/base/placeholder/placeholder.avif" type="image/avif">
+              <source srcset="/media/img/thunderbird/base/placeholder/placeholder.webp" type="image/webp">
+              <img src="/media/img/thunderbird/base/placeholder/placeholder.png" alt="{{_('A rendering of a mobile phone')}}">
+      </picture>
+    </div>
+    <div class="mask" aria-hidden="true">
+      {{ svg('mask') }}
+    </div>
+  </section>
+
   <section id="free-your-inbox">
     <div class="container">
       <div class="section-text cta-section">
