Small adjustments and fix nav menu from overflowing past screen width

--- a/sites/www.thunderbird.net/thunderbird/all/index.html
+++ b/sites/www.thunderbird.net/thunderbird/all/index.html
@@ -155,7 +155,7 @@
           </a>
           <a
             id="download-fdroid-btn"
-            class="btn btn-download btn-white-bg btn-android"
+            class="btn btn-download btn-white-bg btn-slim"
             href="{{ download_url(platform_os='fdroid', channel='mobile') }}"
             data-donate-redirect="download-{{ channel or 'esr' }}"
             data-donate-content="post_download"
