Add the desktop theme and consolidate some custom styling into layout.less

--- a/sites/www.thunderbird.net/index.html
+++ b/sites/www.thunderbird.net/index.html
@@ -359,19 +359,7 @@
     </div>
   </section>
 
-  <section id="free-your-inbox">
-    <div class="container">
-      <div class="section-text cta-section">
-        <h2 class="cta-heading">{{_('<span class="txt-gradient">Free</span> Your Inbox')}}</h2>
-        <h4 class="cta-sub-heading">{{_('Are you ready to love email again?')}}</h4>
-      </div>
-      <div class="cta">
-        <div class="download-button">
-          {{ download_thunderbird(force_direct=true, alt_copy=_('Download'), section="homepage-bottom",  button_class="btn-download btn-white-bg") }}
-        </div>
-      </div>
-    </div>
-  </section>
+  {% include 'includes/components/download-block.html' %}
 
   {% with page_desc = self.page_desc() %}
     {% include "includes/product-metadata.html" %}
