Remove redundant description from each content page.

--- a/sites/www.thunderbird.net/contact/index.html
+++ b/sites/www.thunderbird.net/contact/index.html
@@ -6,7 +6,6 @@
 {% extends "includes/base/page.html" %}
 
 {% block page_title %}{{ _('Contact Us') }}{% endblock %}
-{% block page_desc %}{{ _('Thunderbird is a free email application that’s easy to set up and customize - and it’s loaded with great features!') }}{% endblock %}
 {% block category %}{{ _('About') }}{% endblock %}
 
 {% block content %}
@@ -17,7 +16,7 @@
       <h4>{{ _('Direct your inquiries to the teams below.') }}</h4>
     </div>
     <div class="block-grid">
-      {% call contact_block( svg('base/icons/contact/support'), _('Support'), [(url('support'), _('Support Website')), (url('thunderbird.donate.contact'), _('Donor Help'))]) %}
+      {% call contact_block( svg('base/icons/contact/support'), _('Support'), [(url('support'), _('Support Website')), (url('thunderbird.donate.faq'), _('Donation Help'))]) %}
         {{ _('For questions about how to use Thunderbird, visit and search our Support Website. Feel free to submit a new question if you cannot find an answer. Please remember to be courteous to our staff and volunteers.') }}
         {% if not LANG.startswith('en-') %}
         <p>
