Additional copy updates

--- a/sites/www.thunderbird.net/donate/help/index.html
+++ b/sites/www.thunderbird.net/donate/help/index.html
@@ -25,19 +25,19 @@
       <div class="section-text">
         <p class="intro">
           {% trans trimmed faq=url('thunderbird.donate.faq') %}
-            If you need help donating to Thunderbird and did not find an answer in our <a href="{{ faq }}">FAQs</a>a>,
+            If you need help donating to Thunderbird and did not find an answer in our <a href="{{ faq }}">FAQs</a>,
             please fill out this form and we will get back to you as soon as possible.
           {% endtrans %}
         </p>
         <p class="intro">
           {% trans trimmed modify=url('thunderbird.donate.modify') %}
-            Use the <a href="{{ modify }}">Donor Portal</a> to access your receipts and update or cancel your recurring plan.
+            <strong>Use the <a href="{{ modify }}">Donor Portal</a> to access your receipts and update or cancel your recurring plan.</strong>
           {% endtrans %}
         </p>
         <p class="intro">
           {% trans trimmed support=url('support') %}
             Please note, our payment support team cannot assist with Thunderbird product questions or technical issues.
-            For technical support, please visit our <a href="{{ support }}">support page</a> where you will find helpful articles and community forums.
+            <strong>For technical support, please visit our <a href="{{ support }}">support page</a></strong> where you will find helpful articles and community forums.
           {% endtrans %}
         </p>
       </div>
