Trim some trans blocks for localization

--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -14,7 +14,7 @@
       <div class="section-text">
         <h2>{{ _('Meet <span class="txt-gradient">Thunderbird</span>') }}</h2>
         <p>
-          {% trans %}
+          {% trans trimmed %}
             Thunderbird is a free and open-source software project founded in 2003 to make communicating and collaborating better.
             We are supported by the talent and generosity of thousands of individuals and part of the Mozilla family.
             Essential values guide us and make our work relevant. Read further to learn more.
@@ -94,7 +94,7 @@
       <div class="section-text">
         <h2>{{ _('Driven by <span class="txt-gradient">Community</span>') }}</h2>
         <p>
-          {% trans %}
+          {% trans trimmed %}
             Anyone can help make Thunderbird better.
             Programmers can contribute features they are passionate about or improve the existing code.
             Those who are multilingual can make Thunderbird accessible to everyone.
@@ -116,13 +116,13 @@
       <div class="section-text">
         <h2>{{ _('Part of the <span class="txt-gradient">Mozilla Family</span>') }}</h2>
         <p>
-          {% trans %}
+          {% trans trimmed %}
             Thunderbird operates in a separate, for-profit subsidiary of the Mozilla Foundation.
             This structure gives us the flexibility to offer optional paid services to sustain Thunderbird’s development far into the future.
           {% endtrans %}
         </p>
         <p>
-          {% trans %}
+          {% trans trimmed %}
             We have a growing team of talented employees who develop and maintain Thunderbird, collaborate with our community and partners, and work to deliver Thunderbird to users around the world.
           {% endtrans %}
         </p>
