--- a/sites/www.thunderbird.net/donate/index.html
+++ b/sites/www.thunderbird.net/donate/index.html
@@ -15,7 +15,7 @@
         <h2>{{ _('Become a <span class="txt-gradient">Supporter</span>') }}</h2>
         <h4>{{ _('Help us make Thunderbird better.') }}</h4>
         <p>
-          {% trans %}
+          {% trans trimmed %}
             MZLA Technologies Corporation is the for-profit organization sustaining the free software mission of Thunderbird.
             Our work is to provide open source apps that are secure, private and available for users around the world.
             Your support helps us:
@@ -62,7 +62,7 @@
         <h2>{{ _('Become a <span class="txt-gradient">Corporate Supporter</span>') }}</h2>
         <h4>{{ _('Secure an open future for yourself and the world.') }}</h4>
         <p>
-          {% trans %}
+          {% trans trimmed %}
             Organizations deploying Thunderbird at scale or who share our passion for expanding digital freedoms can make a difference by becoming a one-time or recurring corporate supporter.
             Small to medium size contributions can be made with the form above. For contributions greater than $5000 USD please contact our business team.
             Thank you in advance for your generous support!
