Copy update and video functionality + video assets

--- a/sites/www.thunderbird.net/index.html
+++ b/sites/www.thunderbird.net/index.html
@@ -22,7 +22,7 @@
         <h1 class="tagline">{{_('<span class="txt-gradient">Free</span> Your Inbox')}}</h1>
         <p class="sub-tag">
           {% trans %}
-            Meet Thunderbird, the <strong>email</strong> and <strong>productivity</strong> app that maximizes your freedoms.
+            Meet Thunderbird, the <strong>email and productivity</strong> app that maximizes your freedoms.
           {% endtrans %}
         </p>
       </div>
