--- a/sites/www.thunderbird.net/desktop/index.html
+++ b/sites/www.thunderbird.net/desktop/index.html
@@ -5,10 +5,7 @@
 {% set active_page = "desktop" %}
 {% extends "includes/base/page.html" %}
 
-{% block page_title_prefix %}{{ _('Thunderbird') }} — {% endblock %}
-{% block page_title %}{{ _('Free Your Inbox.') }}{% endblock %}
-{% block page_desc %}{{ _('Thunderbird is a free email application that’s easy to set up and customize - and it’s loaded
-with great features!') }}{% endblock %}
+{% block page_title %}{{ _('Thunderbird Desktop') }}{% endblock %}
 
 {% block breadcrumbs %}{% endblock %}
 
@@ -26,8 +23,7 @@ with great features!') }}{% endblock %}
         </h2>
         <p class="sub-tag">
           {% trans %}
-            Meet Thunderbird, the
-            <strong>email</strong> and <strong>productivity</strong> app that maximizes your freedoms.
+            Meet Thunderbird, the <strong>email and productivity</strong> app that maximizes your freedoms.
           {% endtrans %}
         </p>
       </div>
@@ -48,7 +44,7 @@ with great features!') }}{% endblock %}
 
 {% block content %}
   <section id="core-features">
-    <div class="container">
+    <div class="container container-tight">
       <div class="section-title">
         <h2 class="split-text" aria-label="{{ _('Core Features.') }}">
           {{ _('Core') }}&nbsp;<span class="txt-gradient">{{ _('Features') }}</span>
@@ -60,7 +56,9 @@ with great features!') }}{% endblock %}
 
       <div class="two-columns">
         <div class="content-block">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" alt=""/>
+          <video autoplay loop src="{{ static('video/thunderbird/products/features_services_001.mp4') }}">
+            <p>{{ _('A video of Thunderbird with various email service icons rotating around it.') }}</p>
+          </video>
         </div>
         <div class="section-text">
           <h3>{{ _('Multiple Account Support') }}</h3>
@@ -82,11 +80,13 @@ with great features!') }}{% endblock %}
       </div>
       <div class="two-columns">
         <div class="content-block">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" alt=""/>
+          <video autoplay loop src="{{ static('video/thunderbird/products/features_platforms_001.mp4') }}">
+            <p>{{ _('A video of a heart with various operating system logos around it.') }}</p>
+          </video>
         </div>
         <div class="section-text">
           <h3>{{ _('Cross Platform Support') }}</h3>
-          <h4>{{ _('Your email should work whereever you do.') }}</h4>
+          <h4>{{ _('Your email should work wherever you do.') }}</h4>
           <p>{{ _('Never find yourself locked into an ecosystem. Use the operating system you like and change whenever you like while enjoying the same desktop app experience.') }}</p>
           <a class="strong" href="{{ url('thunderbird.latest.all') }}">{{ _('See All Available Versions') }}</a>
         </div>
@@ -123,7 +123,9 @@ with great features!') }}{% endblock %}
       </div>
       <div class="two-columns">
         <div class="content-block">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" alt=""/>
+          <video autoplay loop src="{{ static('video/thunderbird/products/features_secure_001.mp4') }}">
+            <p>{{ _('A video of a shield with the Thunderbird logo in the center of it.') }}</p>
+          </video>
         </div>
         <div class="section-text">
           <h3>{{ _('Better Security and Privacy') }}</h3>
@@ -180,9 +182,9 @@ with great features!') }}{% endblock %}
             <source srcset="/media/img/thunderbird/base/placeholder/placeholder.webp" type="image/webp">
             <img src="/media/img/thunderbird/base/placeholder/placeholder.png" alt="{{ _('Beatrice the cat') }}">
           </picture>
-          <h4>Getting Started</h4>
-          <p>Meow meow meow meow, meow meow meow! meow meow-meow meow meow.</p>
-          <a class="strong" href="#">{{ _('Read the Guide') }}</a>
+          <h4>{{ _('Getting Started') }}</h4>
+          <p>{{ _('Almost anyone can participate in making Thunderbird better and more accessible to others. Come and learn what opportunities are available. Find ways to contribute to the project:') }}</p>
+          <a class="strong" href="{{ url('thunderbird.participate') }}">{{ _('How to Participate') }}</a>
         </div>
         <div class="info-resource">
           <picture>
@@ -190,9 +192,9 @@ with great features!') }}{% endblock %}
             <source srcset="/media/img/thunderbird/base/placeholder/placeholder.webp" type="image/webp">
             <img src="/media/img/thunderbird/base/placeholder/placeholder.png" alt="{{ _('Beatrice the cat') }}">
           </picture>
-          <h4>Email Compatability</h4>
-          <p>Meow meow meow meow, meow meow meow! meow meow-meow meow meow.</p>
-          <a class="strong" href="#">{{ _('Read the Guide') }}</a>
+          <h4>{{ _('Share Ideas') }}</h4>
+          <p>{{ _('When developers, designers, and users work together amazing things happen. Come share your ideas for how Thunderbird could be better.') }}</p>
+          <a class="strong" href="{{ url('mozorg.connect.tb') }}">{{ _('Mozilla Connect') }}</a>
         </div>
         <div class="info-resource">
           <picture>
@@ -200,9 +202,9 @@ with great features!') }}{% endblock %}
             <source srcset="/media/img/thunderbird/base/placeholder/placeholder.webp" type="image/webp">
             <img src="/media/img/thunderbird/base/placeholder/placeholder.png" alt="{{ _('Beatrice the cat') }}">
           </picture>
-          <h4>Guide to Encryption</h4>
-          <p>Meow meow meow meow, meow meow meow! meow meow-meow meow meow.</p>
-          <a class="strong" href="#">{{ _('Read the Guide') }}</a>
+          <h4>{{ _('Find Support') }}</h4>
+          <p>{{ _('Learn how to use Thunderbird and ask your questions. Thunderbird contributors from around the world are working to make your experience great.') }}</p>
+          <a class="strong" href="{{ url('support') }}">{{ _('Support Site') }}</a>
         </div>
       </div>
     </div>
