--- a/sites/www.thunderbird.net/mobile/index.html
+++ b/sites/www.thunderbird.net/mobile/index.html
@@ -5,10 +5,7 @@
 {% set active_page = "desktop" %}
 {% extends "includes/base/page.html" %}
 
-{% block page_title_prefix %}{{ _('Thunderbird') }} — {% endblock %}
-{% block page_title %}{{ _('Free Your Inbox.') }}{% endblock %}
-{% block page_desc %}{{ _('Thunderbird is a free email application that’s easy to set up and customize - and it’s loaded
-with great features!') }}{% endblock %}
+{% block page_title %}{{ _('Thunderbird Mobile') }}{% endblock %}
 
 {% block breadcrumbs %}{% endblock %}
 
@@ -26,8 +23,8 @@ with great features!') }}{% endblock %}
         </h2>
         <p class="sub-tag">
           {% trans %}
-            Meet Thunderbird, the
-            <strong>email</strong> and <strong>productivity</strong> app that maximizes your freedoms.
+            Meet the leading open-source email app for Android.
+            Enjoy complete freedom anywhere you take your smartphone.
           {% endtrans %}
         </p>
       </div>
@@ -48,7 +45,7 @@ with great features!') }}{% endblock %}
 
 {% block content %}
   <section id="core-features">
-    <div class="container">
+    <div class="container container-tight">
       <div class="section-title">
         <h2 class="split-text" aria-label="{{ _('Core Features.') }}">
           {{ _('Core') }}&nbsp;<span class="txt-gradient">{{ _('Features') }}</span>
@@ -63,10 +60,10 @@ with great features!') }}{% endblock %}
           <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" alt=""/>
         </div>
         <div class="section-text">
-          <h3>{{ _('Multiple Account Support') }}</h3>
-          <h4>{{ _('Manage all your emails in one place.') }}</h4>
-          <p>{{ _('All your email accounts have a home in Thunderbird. Manage accounts separately or in a unified Inbox. Search and organize with ease. Say goodbye to all those browser tabs!') }}</p>
-          <a class="strong" href="{{ url('thunderbird.index') }}">{{ _('See Compatability Chart') }}</a>
+          <h3>{{ _('No Ads or Spyware') }}</h3>
+          <h4>{{ _('It’s actually free!') }}</h4>
+          <p>{{ _('Instead of making money with ads or data, Thunderbird is developed with donations of time and money from people just like you. Manage your email without giving up more of your privacy.') }}</p>
+          <a class="strong" href="{{ url('thunderbird.privacy') }}">{{ _('Read Our Privacy Policy') }}</a>
         </div>
       </div>
       <div class="two-columns flip-columns">
@@ -74,21 +71,21 @@ with great features!') }}{% endblock %}
           <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" alt=""/>
         </div>
         <div class="section-text">
-          <h3>{{ _('Ad Free Experience') }}</h3>
-          <h4>{{ _('Free without strings attached.') }}</h4>
-          <p>{{ _('We do not make money by reading your email. We do not clutter your inbox with ads. Enjoy a clean interface free from commercials and data mining.') }}</p>
-          <a class="strong" href="{{ url('thunderbird.privacy') }}">{{ _('Read Our Privacy Policy') }}</a>
+          <h3>{{ _('All-in-One Email App') }}</h3>
+          <h4>{{ _('Reduce app clutter.') }}</h4>
+          <p>{{ _('Consolidate all your email apps into one powerful app that respects your privacy and freedom. View messages separately or in one unified inbox.') }}</p>
         </div>
       </div>
       <div class="two-columns">
         <div class="content-block">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" alt=""/>
+          <video autoplay loop src="{{ static('video/thunderbird/products/features_services_001.mp4') }}">
+            <p>{{ _('A video of Thunderbird with various email service icons rotating around it.') }}</p>
+          </video>
         </div>
         <div class="section-text">
-          <h3>{{ _('Cross Platform Support') }}</h3>
-          <h4>{{ _('Your email should work whereever you do.') }}</h4>
-          <p>{{ _('Never find yourself locked into an ecosystem. Use the operating system you like and change whenever you like while enjoying the same desktop app experience.') }}</p>
-          <a class="strong" href="{{ url('thunderbird.latest.all') }}">{{ _('See All Available Versions') }}</a>
+          <h3>{{ _('Multiple Account Support ') }}</h3>
+          <h4>{{ _('Don’t miss a message.') }}</h4>
+          <p>{{ _('Sync with email accounts for home, school, and work. Almost anywhere you receive messages, we will have you covered.') }}</p>
         </div>
       </div>
       {# Quote section #}
@@ -113,12 +110,14 @@ with great features!') }}{% endblock %}
       {# ...back to features #}
       <div class="two-columns flip-columns">
         <div class="content-block">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" alt=""/>
+          <video autoplay loop src="{{ static('video/thunderbird/products/features_encryption_001.mp4') }}">
+            <p>{{ _('A video of an envelope with password masking asterisks in front of it.') }}</p>
+          </video>
         </div>
         <div class="section-text">
-          <h3>{{ _('Calendar, Contacts, and Tasks') }}</h3>
-          <h4>{{ _('Because email is just one part of being productive.') }}</h4>
-          <p>{{ _('Thunderbird helps your manage your appointments, contact, and tasks. Stay organized, productive, and connected in one place.') }}</p>
+          <h3>{{ _('Advanced Email Encryption') }}</h3>
+          <h4>{{ _('Send and receive secure messages on any account.') }}</h4>
+          <p>{{ _('Advanced users who want the highest level of privacy can send and receive encrypted emails using the OpenPGP standard when paired with the free and open source OpenKeychain app. Even your email provider won’t have access to your messages.') }}</p>
         </div>
       </div>
       <div class="two-columns">
@@ -126,10 +125,9 @@ with great features!') }}{% endblock %}
           <img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" alt=""/>
         </div>
         <div class="section-text">
-          <h3>{{ _('Better Security and Privacy') }}</h3>
-          <h4>{{ _('Be safe and in charge by default.') }}</h4>
-          <p>{{ _('Thunderbird is open source. Its code has been constantly reviewed and improved over 20 years. Transparency keeps us accountable and you safe.') }}</p>
-          <a class="strong" href="{{ url('participate.desktop.repo') }}">{{ _('View the Source Code') }}</a>
+          <h3>{{ _('Light and Dark Interface') }}</h3>
+          <h4>{{ _('Match your preference or environment.') }}</h4>
+          <p>{{ _('Read your email any time of day and in the way you love with native dark and light mode support. Many small interface features will make you fall in love with Thunderbird Mobile.') }}</p>
         </div>
       </div>
       <div class="two-columns flip-columns">
@@ -163,9 +161,9 @@ with great features!') }}{% endblock %}
             <source srcset="/media/img/thunderbird/base/placeholder/placeholder.webp" type="image/webp">
             <img src="/media/img/thunderbird/base/placeholder/placeholder.png" alt="{{ _('Beatrice the cat') }}">
           </picture>
-          <h4>Getting Started</h4>
-          <p>Meow meow meow meow, meow meow meow! meow meow-meow meow meow.</p>
-          <a class="strong" href="#">{{ _('Read the Guide') }}</a>
+          <h4>{{ _('Getting Started') }}</h4>
+          <p>{{ _('Almost anyone can participate in making Thunderbird better and more accessible to others. Come and learn what opportunities are available. Find ways to contribute to the project:') }}</p>
+          <a class="strong" href="{{ url('thunderbird.participate') }}">{{ _('How to Participate') }}</a>
         </div>
         <div class="info-resource">
           <picture>
@@ -173,9 +171,9 @@ with great features!') }}{% endblock %}
             <source srcset="/media/img/thunderbird/base/placeholder/placeholder.webp" type="image/webp">
             <img src="/media/img/thunderbird/base/placeholder/placeholder.png" alt="{{ _('Beatrice the cat') }}">
           </picture>
-          <h4>Email Compatability</h4>
-          <p>Meow meow meow meow, meow meow meow! meow meow-meow meow meow.</p>
-          <a class="strong" href="#">{{ _('Read the Guide') }}</a>
+          <h4>{{ _('Share Ideas') }}</h4>
+          <p>{{ _('When developers, designers, and users work together amazing things happen. Come share your ideas for how Thunderbird could be better.') }}</p>
+          <a class="strong" href="{{ url('mozorg.connect.tb') }}">{{ _('Mozilla Connect') }}</a>
         </div>
         <div class="info-resource">
           <picture>
@@ -183,9 +181,9 @@ with great features!') }}{% endblock %}
             <source srcset="/media/img/thunderbird/base/placeholder/placeholder.webp" type="image/webp">
             <img src="/media/img/thunderbird/base/placeholder/placeholder.png" alt="{{ _('Beatrice the cat') }}">
           </picture>
-          <h4>Guide to Encryption</h4>
-          <p>Meow meow meow meow, meow meow meow! meow meow-meow meow meow.</p>
-          <a class="strong" href="#">{{ _('Read the Guide') }}</a>
+          <h4>{{ _('Find Support') }}</h4>
+          <p>{{ _('Learn how to use Thunderbird and ask your questions. Thunderbird contributors from around the world are working to make your experience great.') }}</p>
+          <a class="strong" href="{{ url('support') }}">{{ _('Support Site') }}</a>
         </div>
       </div>
     </div>
