Add new graphic assets, and update nav, and product pages

--- a/sites/www.thunderbird.net/desktop/index.html
+++ b/sites/www.thunderbird.net/desktop/index.html
@@ -18,12 +18,13 @@
   <section>
     <div class="container hero">
       <div class="hero-text">
-        <h2 class="split-text tagline" aria-label="{{ _('Thunderbird Desktop.') }}">
+        <h1 class="split-text tagline" aria-label="{{ _('Thunderbird Desktop.') }}">
           {{ _('Thunderbird') }}&nbsp;<span class="txt-gradient">{{ _('Desktop') }}</span>
-        </h2>
+        </h1>
         <p class="sub-tag">
           {% trans %}
-            Meet Thunderbird, the <strong>email and productivity</strong> app that maximizes your freedoms.
+            Powerful Email, Calendar, and Contacts for Windows, Linux, and macOS.
+            Free software designed to make you free.
           {% endtrans %}
         </p>
       </div>
