Add floating phone on homepage

--- a/sites/www.thunderbird.net/index.html
+++ b/sites/www.thunderbird.net/index.html
@@ -90,6 +90,7 @@
           {% endtrans %}
         </p>
       </div>
+      <div class="devices-container">
       <div class="graphic" aria-hidden="true">
         <picture>
           <source srcset="/media/img/thunderbird/new/screens/laptop-bg.avif" type="image/avif">
@@ -108,6 +109,10 @@
             <img src="/media/img/thunderbird/new/screens/calendar-screen.png" alt="">
           </picture>
         </div>
+      </div>
+      <div class="TfA-overlay">
+        {{ high_res_img('thunderbird/base/home/flat-phone.png', {'alt': _('A phone displaying Thunderbird for Android\'s interface.')}, alt_formats=('avif', 'webp')) }}
+      </div>
       </div>
       <div class="cta">
         <!-- <a href="#" class="cta-ln">{{_('See Compatibility')}}</a> -->
