Fix height-based squishing of the header backgrounds, and update preloads

--- a/sites/www.thunderbird.net/desktop/index.html
+++ b/sites/www.thunderbird.net/desktop/index.html
@@ -11,7 +11,7 @@
 
 {% block extrahead %}
   {# Preload the most common format here #}
-  <link rel="preload" as="image" href="{{ l10n_img('thunderbird/base/home/banner-high-res.avif') }}">
+  <link rel="preload" as="image" href="{{ static('/media/img/thunderbird/base/desktop/banner-bg-high-res.avif') }}">
 {% endblock %}
 
 {% block header_content %}
