--- a/sites/www.thunderbird.net/mobile/index.html
+++ b/sites/www.thunderbird.net/mobile/index.html
@@ -12,9 +12,8 @@
 
 {% block extrahead %}
   {# Preload the most common format here #}
-  <link rel="preload" as="image" href="{{ l10n_img('thunderbird/base/home/banner-high-res.avif') }}">
+  <link rel="preload" as="image" href="{{ static('/media/img/thunderbird/base/mobile/banner-bg-high-res.avif') }}">
 {% endblock %}
-
 {% block header_content %}
   <section>
     <div class="container hero">
