--- a/sites/www.thunderbird.net/desktop/index.html
+++ b/sites/www.thunderbird.net/desktop/index.html
@@ -46,7 +46,7 @@
 {% block content %}
   <section id="core-features">
     <div class="container container-tight">
-      <div class="section-title">
+      <div class="section-text">
         <h2 class="split-text" aria-label="{{ _('Core Features.') }}">
           {{ _('Core') }}&nbsp;<span class="txt-gradient">{{ _('Features') }}</span>
         </h2>
@@ -157,7 +157,7 @@
   {% include 'includes/components/page-separator.html' %}
   <section id="third-party-ecosystem">
     <div class="container">
-      <div class="section-title">
+      <div class="section-text">
         <h2 class="split-text" aria-label="{{ _('Third-Party Ecosystem.') }}">
           {{ _('Third-Party') }}&nbsp;<span class="txt-gradient">{{ _('Ecosystem') }}</span>
         </h2>
@@ -174,7 +174,7 @@
   </section>
   <section id="helpful-resources">
     <div class="container">
-      <div class="section-title">
+      <div class="section-text">
         <h2 class="split-text" aria-label="{{ _('Helpful Resources.') }}">
           {{ _('Helpful') }}&nbsp;<span class="txt-gradient">{{ _('Resources') }}</span>
         </h2>
