--- a/sites/www.thunderbird.net/mobile/index.html
+++ b/sites/www.thunderbird.net/mobile/index.html
@@ -44,7 +44,7 @@
 {% block content %}
   <section id="core-features">
     <div class="container container-tight">
-      <div class="section-title">
+      <div class="section-text">
         <h2 class="split-text" aria-label="{{ _('Core Features.') }}">
           {{ _('Core') }}&nbsp;<span class="txt-gradient">{{ _('Features') }}</span>
         </h2>
@@ -149,13 +149,25 @@
       </div>
     </div>
   </section>
-    <section class="cover-container">
+  <section id="instant-setup">
+    <div class="container">
+      <div class="section-text">
+        <h2 class="split-text" aria-label="{{ _('Instant Setup.') }}">
+          {{ _('Instant') }}&nbsp;<span class="txt-gradient">{{ _('Setup') }}</span>
+        </h2>
+        <h4>
+          {{ _('Thunderbird Desktop users can migrate their settings quickly. Just scan the desktop app QR code from the mobile app.') }}
+        </h4>
+      </div>
+    </div>
+  </section>
+  <section class="cover-container">
     {{ high_res_img('thunderbird/base/mobile/setup-background.png', {'alt': _('Two QR codes are shown, one on a mobile device and another in the distance on a desktop.')}, alt_formats=('avif', 'webp')) }}
     {% include 'includes/components/page-separator-cover.html' %}
   </section>
   <section id="helpful-resources">
     <div class="container">
-      <div class="section-title">
+      <div class="section-text">
         <h2 class="split-text" aria-label="{{ _('Helpful Resources.') }}">
           {{ _('Helpful') }}&nbsp;<span class="txt-gradient">{{ _('Resources') }}</span>
         </h2>
