Added missing page separator

--- a/sites/www.thunderbird.net/mobile/index.html
+++ b/sites/www.thunderbird.net/mobile/index.html
@@ -149,6 +149,7 @@
       </div>
     </div>
   </section>
+  {% include 'includes/components/page-separator.html' %}
   <section id="instant-setup">
     <div class="container">
       <div class="section-text">
